using System;
using System.Collections.Generic;
using System.Text;

namespace GoTo.Lambda.Domain {
    public class Destination {
        public string Name { get; set; }
        public double Latitude { get; set; }
        public double Longitude { get; set; }
    }
}
